--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: post-index
     <!-- POST FEATURED IMAGE -->
     <div class="featured-image">
     {% if post.featured-image == "" or post.featured-image == nil %}
-        <img src="/images/blog_header.JPG.jpg", style="width:100%">
+        <img src="/images/default-header.png", style="width:100%">
     {% else %}
         <img src="{{ post.featured-image }}" style="width:100%">
     {% endif %}
