--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: post-index
     {% if post.featured-image == "" or post.featured-image == nil %}
         
     {% else %}
-        <img src="{{ post.featured-image }}" style="width:50%">
+        <center>
+         <img src="{{ post.featured-image }}" style="width:50%">
+        </center>
     {% endif %}
     </div>
 
