--- a/trying/register.html
+++ b/trying/register.html
@@ -44,7 +44,7 @@
         </tr>
         <tr>
             <th colspan="3">
-                <a href="http://localhost:63342/python%20文件/注册结果.html" > <input type="button" name="submit" value="提交" /></a>
+                <a href="/trying/result.html" > <input type="button" name="submit" value="提交" /></a>
                 <input type="reset" name="reset" value="重置" />
                 <button>验证</button>
             </th>
