--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -1,5 +1,7 @@
 
+2.4first-class
 
+<center>
 
 <iframe src="/images/A Guide to Solving Social Problems with Machine Learning.pdf" width="800" height="600"></iframe> 
 
@@ -72,7 +74,7 @@ But often it’s only the human who can see the extenuating circumstance in a gi
 Encourage the spread of machine learning to help solve the most challenging social problems in order to improve
 the lives of many. But also be reminded to be mindful, and to wear our seatbelts.
 
-
+</center>
 </p>
 </body>
 </html>
