--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
-layout: post-index
+layout: post
 ---
 <center>
- <a href="/">HOME</a>
- <a href="/archives/">ARCHIVE</a>
- <a href="/tags/">TAGS</a>
- <a href="/about/">ABOUT</a>
- <a href="/images/Tony-zeshi Yang resume.pdf">CV</a>
- <a href="/trying/">trying</a>
- <a href="/Classes/">Classes</a>
+ <a href="/">HOME</a><br><br>
+ <a href="/archives/">ARCHIVE</a><br><br>
+ <a href="/tags/">TAGS</a><br><br>
+ <a href="/about/">ABOUT</a><br><br>
+ <a href="/images/Tony-zeshi Yang resume.pdf">CV</a><br><br>
+ <a href="/trying/">trying</a><br><br>
+ <a href="/Classes/">Classes</a><br><br>
             
- <a href="/ML and DM projects/">ML&DM</a>
- <a href="https://github.com/tonyzyang">Tony-zeshi yang github</i></a>
- <a href="https://twitter.com/yangzeshi">Tony-zeshi yang twitter</a>
- <a href="https://www.linkedin.com/in/tony-zeshi-yang/">Tony-zeshi yang-linkedin</a> 
+ <a href="/ML and DM projects/">ML&DM</a><br><br>
+ <a href="https://github.com/tonyzyang">Tony-zeshi yang github</i></a><br><br>
+ <a href="https://twitter.com/yangzeshi">Tony-zeshi yang twitter</a><br><br>
+ <a href="https://www.linkedin.com/in/tony-zeshi-yang/">Tony-zeshi yang-linkedin</a> <br><br>
 </center>
