--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: post
 ---
 <center>
  <a href="/">HOME</a><br><br>
- <a href="/archives/">ARCHIVE</a><br><br>
- <a href="/tags/">TAGS</a><br><br>
- <a href="/about/">ABOUT</a><br><br>
+ <a href="/archives/">ARCHIVE</a>：Sort by Year)<br><br>
+ <a href="/tags/">TAGS</a>(Sort by Content) <br><br>
+ <a href="/about/">ABOUT ME</a><br><br>
  <a href="/images/Tony-zeshi Yang resume.pdf">CV</a><br><br>
  <a href="/trying/">trying</a><br><br>
  <a href="/Classes/">Classes</a><br><br>
             
- <a href="/ML and DM projects/">ML&DM</a><br><br>
+ <a href="/ML and DM projects/">ML&DM(machine learning and data mining projects</a><br><br>
  <a href="https://github.com/tonyzyang">Tony-zeshi yang github</i></a><br><br>
  <a href="https://twitter.com/yangzeshi">Tony-zeshi yang twitter</a><br><br>
  <a href="https://www.linkedin.com/in/tony-zeshi-yang/">Tony-zeshi yang-linkedin</a> <br><br>
