--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: post
 ---
 <center>
  <a href="/">HOME</a><br><br>
- <a href="/archives/">ARCHIVE</a>：Sort by Year)<br><br>
- <a href="/tags/">TAGS</a>(Sort by Content) <br><br>
+ <a href="/archives/">ARCHIVE(Articles Sorted by Year)</a><br><br>
+ <a href="/tags/">TAGS(Articles Sorted by Content)</a> <br><br>
  <a href="/about/">ABOUT ME</a><br><br>
  <a href="/images/Tony-zeshi Yang resume.pdf">CV</a><br><br>
  <a href="/trying/">trying</a><br><br>
