--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: post
 ---
 <center>
- <a href="/">HOME</a><br><br>
- <a href="/archives/">ARCHIVE(Articles Sorted by Year)</a><br><br>
- <a href="/tags/">TAGS(Articles Sorted by Content)</a> <br><br>
- <a href="/about/">ABOUT ME</a><br><br>
- <a href="/images/Tony-zeshi Yang resume.pdf">CV</a><br><br>
- <a href="/trying/">trying</a><br><br>
- <a href="/Classes/">Classes</a><br><br>
+ <a href="/"><U>HOME</U></a><br><br>
+ <a href="/archives/"><U>ARCHIVE(Articles Sorted by Year)</U></a><br><br>
+ <a href="/tags/"><U>TAGS(Articles Sorted by Content)</U></a> <br><br>
+ <a href="/about/"><U>ABOUT ME</U></a><br><br>
+ <a href="/images/Tony-zeshi Yang resume.pdf"><U>CV</U></a><br><br>
+ <a href="/trying/"><U>trying</U></a><br><br>
+ <a href="/Classes/"><U>Classes</U></a><br><br>
             
- <a href="/ML and DM projects/">ML&DM(machine learning and data mining projects</a><br><br>
- <a href="https://github.com/tonyzyang">Tony-zeshi yang github</i></a><br><br>
- <a href="https://twitter.com/yangzeshi">Tony-zeshi yang twitter</a><br><br>
- <a href="https://www.linkedin.com/in/tony-zeshi-yang/">Tony-zeshi yang-linkedin</a> <br><br>
+ <a href="/ML and DM projects/"><U>ML&DM(machine learning and data mining projects</U></a><br><br>
+ <a href="https://github.com/tonyzyang"><U>Tony-zeshi yang github</U></a><br><br>
+ <a href="https://twitter.com/yangzeshi"><U>Tony-zeshi yang twitter</U></a><br><br>
+ <a href="https://www.linkedin.com/in/tony-zeshi-yang/"><U>Tony-zeshi yang-linkedin</U></a> <br><br>
 </center>
