--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: post
 ---
 <center>
- <a href="/"><U>HOME</U></a><br><br>
- <a href="/archives/"><U>ARCHIVE(Articles Sorted by Year)</U></a><br><br>
- <a href="/tags/"><U>TAGS(Articles Sorted by Content)</U></a> <br><br>
- <a href="/about/"><U>ABOUT ME</U></a><br><br>
- <a href="/images/Tony-zeshi Yang resume.pdf"><U>CV</U></a><br><br>
- <a href="/trying/"><U>trying</U></a><br><br>
- <a href="/Classes/"><U>Classes</U></a><br><br>
+
+ <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
+ <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
+ <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
+ <a href="/images/Tony-zeshi Yang resume.pdf"><b><U>CV</U></a><br><br>
+ <a href="/trying/"><b><U>trying</U></b></a><br><br>
+ <a href="/Classes/"><U><b>Classes</U></b></a><br><br>
             
- <a href="/ML and DM projects/"><U>ML&DM(machine learning and data mining projects</U></a><br><br>
- <a href="https://github.com/tonyzyang"><U>Tony-zeshi yang github</U></a><br><br>
- <a href="https://twitter.com/yangzeshi"><U>Tony-zeshi yang twitter</U></a><br><br>
- <a href="https://www.linkedin.com/in/tony-zeshi-yang/"><U>Tony-zeshi yang-linkedin</U></a> <br><br>
+ <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects</U></b></a><br><br>
+ <a href="https://github.com/tonyzyang"><b><U>Tony-zeshi yang github</U></b></a><br><br>
+ <a href="https://twitter.com/yangzeshi"><b><U>Tony-zeshi yang twitter</U></b></a><br><br>
+ <a href="https://www.linkedin.com/in/tony-zeshi-yang/"><b><U>Tony-zeshi yang-linkedin</b></U></a> <br><br>
 </center>
