--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 ---
 layout: post
 ---
+
+<style type="text/css">
+<!--
+a:link { text-decoration: none;color: blue}
+a:active { text-decoration:blink}
+a:hover { text-decoration:underline;color: red}
+a:visited { text-decoration: none;color: green}
+-－>
+</style>
 <center>
 
  <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
