--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: post
 
 <style type="text/css">
 <!--
-a:link { text-decoration: none;color: blue}
+a:link { text-decoration: none;color: black}
 a:active { text-decoration:blink}
 a:hover { text-decoration:underline;color: red}
-a:visited { text-decoration: none;color: green}
+a:visited { text-decoration: none;color: blue}
 -－>
 </style>
 <center>
