--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
----
-layout: post
----
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
+   
+<head>
+    {% include head.html %}
 
-<style type="text/css">
+    <!-- HEADER IMAGE -->
+    <center>
+        <span class="main-header-image">
+            <a href="http://www.zeshiyang.com/"><img src="/images/blog_header.jpg"></a>
+        </span>
+    </center>
+
+    <!-- NAVIGATION -->
+    <br>
+    <center>
+        <ul class="navigation-bar">
+            <li><a href="/">HOME</a></li>
+            <li><a href="/archives/">ARCHIVE</a></li>
+            <li><a href="/tags/">TAGS</a></li>
+            <li><a href="/about/">ABOUT</a></li>
+            <li><a href="/images/Tony-zeshi Yang resume.pdf">CV</a></li>
+            <li><a href="/trying/">trying</a></li>
+            <li><a href="/Classes/">Classes</a></li>
+            <li><a href="/ML and DM projects/">ML&DM</a></li>
+            <li><a href="https://github.com/tonyzyang"><i class='fa fa-github-alt'></i></a></li>  
+            <li><a href="https://twitter.com/yangzeshi"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/tony-zeshi-yang/"><i class='fa fa-linkedin'></i></a></li>
+        </ul>
+    </center> 
+</head>
+
+<!-- BODY -->
+<body id="post-index">
+    {% include browser-upgrade.html %}
+    <style type="text/css">
 <!--
 a:link { text-decoration: none;color: black}
 a:active { text-decoration:blink}
@@ -24,3 +58,18 @@ a:visited { text-decoration: none;color: blue}
  <a href="https://twitter.com/yangzeshi"><b><U>Tony-zeshi yang twitter</U></b></a><br><br>
  <a href="https://www.linkedin.com/in/tony-zeshi-yang/"><b><U>Tony-zeshi yang-linkedin</b></U></a> <br><br>
 </center>
+
+
+
+</body>
+    
+<!-- FOOTER -->  
+<footer>  
+    <div class="footer-wrapper">
+        <footer role="contentinfo">
+            {% include footer.html %}
+        </footer>
+    </div>   
+</footer>  
+</html>
+
