--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <!-- BODY -->
 <body id="post-index">
     {% include browser-upgrade.html %}
+    <div id="main" role="main">
+        <article class="hentry">
+
     <style type="text/css">
 <!--
 a:link { text-decoration: none;color: black}
@@ -59,8 +62,8 @@ a:visited { text-decoration: none;color: blue}
  <a href="https://www.linkedin.com/in/tony-zeshi-yang/"><b><U>Tony-zeshi yang-linkedin</b></U></a> <br><br>
 </center>
 
-
-
+        </article>
+    </div>
 </body>
     
 <!-- FOOTER -->  
