--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
             <a href="http://www.zeshiyang.com/"><img src="/images/blog_header.jpg"></a>
         </span>
     </center>
+</head>
 
 
-
-<!-- BODY -->
-<body id="post-index">
-    {% include browser-upgrade.html %}
-    <div id="main" role="main">
-        <article class="hentry">
+    <!-- BODY -->
+    <body id="post-index">
+        {% include browser-upgrade.html %}
+        <div id="main" role="main">
+            <article class="hentry">
 
     <style type="text/css">
 <!--
