--- a/index.html
+++ b/index.html
@@ -1,41 +1,6 @@
-<!doctype html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
-<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
-<center>
-<head>
-    {% include head.html %}
-
-    <!-- HEADER IMAGE -->
-    <center>
-        <span class="main-header-image">
-            <a href="http://www.zeshiyang.com/"><img src="/images/blog_header.jpg"></a>
-        </span>
-    </center>
-</head>
-</center>
-
-<!-- BODY -->
-    <body id="post-index">
-        {% include browser-upgrade.html %}
-        <div id="main" role="main">
-            <article class="hentry">
-
- 
-        </article>
-    </div>
-</body>
-    
-<!-- FOOTER -->  
-<footer>  
-    <div class="footer-wrapper">
-        <footer role="contentinfo">
-            {% include footer.html %}
-        </footer>
-    </div>   
-</footer>  
-</html>
+---
+layout: post
+---
 
    <style type="text/css">
 <!--
