--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
 ---
-
+<body background="/image/background.jpg"></body>
    <style type="text/css">
 <!--
 a:link { text-decoration: none;color: black}
