--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: post-index
 a:link { text-decoration: none;color: black}
 a:active { text-decoration:blink}
 a:hover { text-decoration:underline;color: red}
-a:visited { text-decoration: none;color: blue}
+a:visited { text-decoration: none;color: white}
 -－>
 </style>
 <center>
