--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -18,7 +18,7 @@
         p{
             
             font-family: "Times New Roman", Times, serif;
-            color:black;
+            color:white;
            
         }
     </style>
