--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -1,6 +1,6 @@
 
 2.4first-class
-<body background="/images/background1.jpg"></body>
+<body background="/images/background.jpg"></body>
 <center>
 
 <iframe src="/images/A Guide to Solving Social Problems with Machine Learning.pdf" width="800" height="600"></iframe> 
@@ -18,7 +18,7 @@
         p{
             
             font-family: "Times New Roman", Times, serif;
-            color:white;
+            color:black;
            
         }
     </style>
