--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -19,10 +19,11 @@
             
             font-family: "Times New Roman", Times, serif;
             color:black;
+            size="10"
            
         }
     </style>
-    <title>字体</title>
+    <title>2.4first-class</title>
 </head>
 <body>
 <p>
