--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -19,8 +19,7 @@
             
             font-family: "Times New Roman", Times, serif;
             color:black;
-            size="10"
-           
+            size="10";           
         }
     </style>
     <title>2.4first-class</title>
