--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -71,7 +71,7 @@ For people to know when to override, they need to understand their comparative a
 
 But often it’s only the human who can see the extenuating circumstance in a given case, since it may be based on factors not captured in the data on which the algorithm was trained.<br>
  <br />
-<font face="宋体" size="25" color="#0088FF"><b>Pair caution with hope</b><br>
+<font size="25" color="#0088FF"><b>Pair caution with hope</b><br>
 Encourage the spread of machine learning to help solve the most challenging social problems in order to improve
 the lives of many. But also be reminded to be mindful, and to wear our seatbelts.
 </font><br/>
