--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -25,7 +25,7 @@
     <title>2.4first-class</title>
 </head>
 <body>
-  
+  <font size="6">
   <p>   
 <font size="10"><b>Summary</b><br></font>
 <font size="8"><b>How machine learning can improve public policy</b><br></font>
@@ -74,6 +74,7 @@ But often it’s only the human who can see the extenuating circumstance in a gi
 Encourage the spread of machine learning to help solve the most challenging social problems in order to improve
 the lives of many. But also be reminded to be mindful, and to wear our seatbelts.
 <br/>
+</font>
 </center>
 </p>
 </body>
