--- a/Classes/ML for law/2.4first-class.html
+++ b/Classes/ML for law/2.4first-class.html
@@ -1,6 +1,6 @@
 
 2.4first-class
-<body background="/images/background.jpg"></body>
+<body background="/images/background2.jpg"></body>
 <center>
 
 <iframe src="/images/A Guide to Solving Social Problems with Machine Learning.pdf" width="800" height="600"></iframe> 
