--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ a:visited { text-decoration: none;color: white}
 -－>
 </style>
 <center>
-<font size="8">
- <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
- <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
- <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
+<font size="5">
+ <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
+ <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br><br>
+ <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br><br>
 
- <a href="/images/Tony-zeshi Yang resume.pdf"><b><U>CV</U></a><br><br>
+ <a href="/images/Tony-zeshi Yang resume.pdf"><b><U>CV</U></a><br><br><br>
 
- <a href="/Classes/"><U><b>Classes</U></b></a><br><br>
- <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
+ <a href="/Classes/"><U><b>Classes</U></b></a><br><br><br>
+ <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br><br>
  <a href="/trying/"><b><U>Register/log in</U></b></a><br><br>
     </font>
 </center>
