--- a/Classes/ML/ML.html
+++ b/Classes/ML/ML.html
@@ -3,5 +3,5 @@ layout: post
 ---
 <b>Machine Learning></b><br><br>
 
-<a href="/Classes/ML/2.6_ml_notes.pdf><font style="color:blue;">2.6_note_G distriubtuion&bayes</font></a>
+<a href="/Classes/ML/2.6_ml_notes.pdf"><font style="color:blue;">2.6_note_G distriubtuion&bayes</font></a>
 
