--- a/Classes/ML/ML.html
+++ b/Classes/ML/ML.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 ---
-<b>Machine Learning></b><br><br>
+<b>Machine Learning</b><br><br>
 
 <a href="/Classes/ML/2.6_ml_notes.pdf"><font style="color:blue;">2.6_note_G distriubtuion&bayes</font></a>
 
