--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: post-index
 ---
+<audio autoplay="autoplay" loop="loop" preload="auto"
+            src="/花儿清水河.mp3">
+ 
+</audio>
 
    <style type="text/css">
 <!--
