--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
 ---
-<audio autoplay="autoplay" loop="loop" preload="auto"
+<audio autoplay="autoplay" loop="loop"
             src="/花儿清水河.mp3">
  
 </audio>
