--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
 	<body>
 		<!--添加音频播放，设置为自动播放,并隐藏播放控件的显示-->
 		<audio controls="controls" autoplay="autoplay" controls="controls" hidden="hidden">
-			<source src="、花儿清水河.mp3" type="audio/mp3">
+			<source src="/花儿清水河.mp3" type="audio/mp3">
 			<embed height="50px" width="100px" src="file/tears.mp3">
 		</audio>
 	</body>
