Update and rename backMusic.html to index1.html

--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,6 @@ layout: post-index
 <html>
 	<frameset cols="0%,100%">
 		<frame src="/music.html"/>
-		<frame src="/index.html" />
+		<frame src="/backmusic.html" />
 	</frameset>
 </html>
