--- a/music.html
+++ b/music.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<!--添加音频播放，设置为自动播放,并隐藏播放控件的显示-->
-		<audio autoplay="autoplay" loop="loop" preload="auto">
+		<audio autoplay="autoplay" loop="loop" preload="meta">
 			<source src="/花儿清水河.mp3" type="audio/mp3">
 			
 		</audio>
