--- a/music.html
+++ b/music.html
@@ -1,15 +1,14 @@
 
-<!DOCTYPE html>
+
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		<!--添加音频播放，设置为自动播放,并隐藏播放控件的显示-->
-		<audio autoplay="autoplay" loop="loop" preload="meta">
-			<source src="/花儿清水河.mp3" type="audio/mp3">
-			
-		</audio>
-	</body>
+<body>
+
+<audio autoplay="autoplay">
+  <source src="/花儿清水河.mp3" type="audio/mpeg" />
+Your browser does not support the audio element.
+</audio>
+
+</body>
 </html>
+
