--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
 <html>
 <body>
 
-<audio autoplay="autoplay">
+<audio autoplay="autoplay" loop="loop">
   <source src="/花儿清水河.mp3" type="audio/mpeg" />
 Your browser does not support the audio element.
 </audio>
