--- a/Classes/Acct/2.6-inventory/index.html
+++ b/Classes/Acct/2.6-inventory/index.html
@@ -2,4 +2,6 @@
 layout: post
 ---
 <b>2.6-inventory-note</b>
-<img src="/Classes/Acct/ 2.6-inventory/" alt="Smiley face" height="42" width="42">
+<img src="/Classes/Acct/2.6-inventory/2.6-1.png"><br>
+<img src="/Classes/Acct/2.6-inventory/2.6-2.jpg"><br>
+<img src="/Classes/Acct/2.6-inventory/2.6-3.png"><br>
