--- a/Classes/Acct/index.html
+++ b/Classes/Acct/index.html
@@ -3,4 +3,4 @@
 layout: post
 ---
 
-<a href="/Classes/Acct/2.6-inventory/index.html">2.6-inventory-note</a>
+<a href="/Classes/Acct/2.6-inventory">2.6-inventory-note</a>
