--- a/home/index.html
+++ b/home/index.html
@@ -2,17 +2,8 @@
 layout: post-index
 ---
 
-
-   <style type="text/css">
-<!--
-a:link { text-decoration: none;color: black}
-a:active { text-decoration:blink}
-a:hover { text-decoration:underline;color: red}
-a:visited { text-decoration: none;color: white}
--－>
-</style>
 <center>
-<font size="5">
+<font size="5" style="color: white;">
  <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
  <a href="/Classes/"><U><b>Classes</U></b></a><br><br><br>
  <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br><br>
