--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@ layout: post-index
 ---
 
 <center>
-<font size="5" style="color: white;">
+<font size="5" color="white">
  <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
  <a href="/Classes/"><U><b>Classes</U></b></a><br><br><br>
  <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br><br>
