--- a/home/index.html
+++ b/home/index.html
@@ -3,22 +3,22 @@ layout: post-index
 ---
 
 <center>
-<font size="5" color="white">
- <a href="/about/"><U><b><p style="color: white;">ABOUT ME</p></b></U></a><br><br><br>
+<font size="5">
+ <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
  
  
- <a href="/Classes/"><U><b><p style="color: white;">Classes</U></b></p></a><br><br><br>
+ <a href="/Classes/"><U><b>Classes</U></b></a><br><br><br>
  
  
- <a href="/archives/"><b><U><p style="color: white;">ARCHIVE</b>(Articles Sorted by Year)</p></U></a><br><br><br>
+ <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br><br>
 
 
- <a href="/tags/"><U><b><p style="color: white;">TAGS</b>(Articles Sorted by Content)</p></U></a> <br><br><br>
+ <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br><br>
 
 
- <a href="/ML and DM projects/"><b><U><p style="color: white;">ML&DM(machine learning and data mining projects)</p></U></b></a><br><br><br>
+ <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br><br>
 
 
- <a href="/trying/"><b><U><p style="color: white;">Register/log in</U></p></b></a><br><br>
+ <a href="/trying/"><b><U>Register/log in</U></b></a><br><br>
     </font>
 </center>
