--- a/home/index.html
+++ b/home/index.html
@@ -3,7 +3,7 @@ layout: post-index
 ---
 
 <center>
-<font size="5">
+<font size="5" color="#ffffff">
  <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
  
  
@@ -20,5 +20,5 @@ layout: post-index
 
 
  <a href="/trying/"><b><U>Register/log in</U></b></a><br><br>
-    </font>
+</font>
 </center>
