--- a/home/index.html
+++ b/home/index.html
@@ -4,21 +4,20 @@ layout: post-index
 
 <center>
 <font size="5" color="#ffffff">
- <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br><br>
+ <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
  
  
- <a href="/Classes/"><U><b>Classes</U></b></a><br><br><br>
+ <a href="/Classes/"><U><b>Classes</U></b></a><br><br>
+ <a href="/Equity Research/"><U><b>Equity Research</U></b></a><br><br>
  
- 
- <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br><br>
+ <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
 
 
- <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br><br>
+ <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
 
 
- <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br><br>
+ <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
 
-
- <a href="/trying/"><b><U>Register/log in</U></b></a><br><br>
+ <a href="/trying/"><b><U>Register/log in</U></b></a><br>
 </font>
 </center>
