--- a/home/index.html
+++ b/home/index.html
@@ -8,7 +8,7 @@ layout: post-index
  
  
  <a href="/Classes/"><U><b>Classes</U></b></a><br><br>
- <a href="/Equity Research/"><U><b>Equity Research</U></b></a><br><br>
+ <a href="/Equity Report/"><U><b>Equity Report</U></b></a><br><br>
  
  <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
 
