--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -6,3 +6,5 @@ layout: post
 <b>中金公司-酒鬼酒-000799-发力湖南，培育高端-181018</b>
 </center>
 
+<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒.png">
+<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒-k.png">
