--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -3,8 +3,12 @@ layout: post
 ---
 
 <center>
-<b>中金公司-酒鬼酒-000799-发力湖南，培育高端-181018</b>
-</center>
+<b>中金公司-酒鬼酒-000799-发力湖南，培育高端-181018</b></br></br>
 
-<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒.png">
-<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒-k.png">
+
+<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒.png"></br>
+<img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒-k.png"></br></br>
+  
+全文：</br></br>
+<iframe src="/images/A Guide to Solving Social Problems with Machine Learning.pdf" width="800" height="1600"></iframe>   
+</center>
