--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -10,5 +10,5 @@ layout: post
 <img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒-k.png"></br></br>
   
 全文：</br></br>
-<iframe src="/images/A Guide to Solving Social Problems with Machine Learning.pdf" width="800" height="1600"></iframe>   
+<iframe src="/Equity Report/点评-中金公司-酒鬼酒-181018/中金公司-酒鬼酒-000799-发力湖南，培育高端-181018.pdf" width="800" height="1600"></iframe>   
 </center>
