--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -4,8 +4,8 @@ layout: post
 
 <center>
 <b>中金公司-酒鬼酒-000799-发力湖南，培育高端-181018</b></br></br>
-
-
+有点事后诸葛亮的意思。</br></br>
+  全文大部分定性分析，但定性分析是最不靠谱的分析，定性分析全靠吹，最靠不住了。一个公司，只有财务报表最可靠，虽然中国公司的财报都是加工过的，但是财务分析依然是投资者判断一个公司的最佳方式。至于文中图表20的DCF模型，完全不可靠，预测18年比17年EBIT能提高62%？？这假设太离谱了。</br></br>
 <img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒.png"></br>
 <img src="/Equity Report/点评-中金公司-酒鬼酒-181018/酒鬼酒-k.png"></br></br>
   
