--- a/home/index.html
+++ b/home/index.html
@@ -4,13 +4,13 @@ layout: post-index
 
 <center>
 <font size="5" color="#ffffff">
- <a href="/about/#"><U><b>ABOUT ME</b></U></a><br><br>
+ <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
  
  
- <a href="/Classes/#"><U><b>Classes</U></b></a><br><br>
- <a href="/Equity Report/#"><U><b>Equity Report</U></b></a><br><br>
+ <a href="/Classes/"><U><b>Classes</U></b></a><br><br>
+ <a href="/Equity Report/"><U><b>Equity Report</U></b></a><br><br>
  
- <a href="/archives/#"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
+ <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
 
 
  <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
@@ -21,3 +21,9 @@ layout: post-index
  <a href="/trying/"><b><U>Register/log in</U></b></a><br>
 </font>
 </center>
+
+<div class="pagination">
+<center>
+{% include pagination.html %}
+</center>
+    </div>
