--- a/home/index.html
+++ b/home/index.html
@@ -4,6 +4,7 @@ layout: post-index
 
 <center>
 <font size="5" color="#ffffff">
+ <span>
  <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
  
  
@@ -14,11 +15,12 @@ layout: post-index
 
 
  <a href="/tags/"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
-
+<span>
 
  <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
 
  <a href="/trying/"><b><U>Register/log in</U></b></a><br>
+</span>
 </font>
 </center>
 
