--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
----
-layout: post-index
----
-
 <!DOCTYPE html>
-
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <html>
 	<frameset cols="0%,100%">
 		<frame src="/music.html"/>
