--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-	<frameset cols="0%,100%" target="_blank">
+	<frameset cols="0%,100%">
 		<frame src="/music.html"/>
-		<frame src="/home/" />
+		<frame src="/home/" target="_blank" />
 	</frameset>
 </html>
