--- a/home/index.html
+++ b/home/index.html
@@ -17,9 +17,9 @@ layout: post-index
  <a href="/tags/" target="_blank"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
 <span>
 
- <a href="/ML and DM projects/" target="_blank"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
+ <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
 
- <a href="/trying/" target="_blank"><b><U>Register/log in</U></b></a><br>
+ <a href="/trying/"><b><U>Register/log in</U></b></a><br>
 </span>
 </font>
 </center>
