--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <html>
 	<frameset cols="0%,100%">
 		<frame src="/music.html"/>
-		<frame src="/home/" target="_blank" />
+		<frame src="/home/"  />
 	</frameset>
 </html>
