--- a/home/index.html
+++ b/home/index.html
@@ -5,21 +5,21 @@ layout: post-index
 <center>
 <font size="5" color="#ffffff">
  <span>
- <a href="/about/"><U><b>ABOUT ME</b></U></a><br><br>
+ <a href="/about/" target="_blank"><U><b>ABOUT ME</b></U></a><br><br>
  
  
- <a href="/Classes/" ><U><b>Classes</U></b></a><br><br>
- <a href="/Equity Report/"><U><b>Equity Report</U></b></a><br><br>
+ <a href="/Classes/" target="_blank"><U><b>Classes</U></b></a><br><br>
+ <a href="/Equity Report/" target="_blank"><U><b>Equity Report</U></b></a><br><br>
  
- <a href="/archives/"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
+ <a href="/archives/" target="_blank"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
 
 
- <a href="/tags/" ><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
+ <a href="/tags/" target="_blank"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
 <span>
 
- <a href="/ML and DM projects/"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
+ <a href="/ML and DM projects/" target="_blank"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
 
- <a href="/trying/"><b><U>Register/log in</U></b></a><br>
+ <a href="/trying/" target="_blank"><b><U>Register/log in</U></b></a><br>
 </span>
 </font>
 </center>
