--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -1,7 +1,17 @@
 ---
 layout: post
 ---
-
+<script type="text/javascript">
+loopy()
+function loopy() {
+var sWord =""
+while (sWord != "123") {//初始密码123 
+sWord = prompt("input code!")
+}
+alert("AH…欢迎光临！")
+}
+</script>
+ 
 <center>
 <b>中金公司-酒鬼酒-000799-发力湖南，培育高端-181018</b></br></br>
 有点事后诸葛亮的意思。</br></br>
@@ -12,3 +22,4 @@ layout: post
 全文：</br></br>
 <iframe src="/Equity Report/点评-中金公司-酒鬼酒-181018/中金公司-酒鬼酒-000799-发力湖南，培育高端-181018.pdf" width="800" height="1600"></iframe>   
 </center>
+
