--- a/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
+++ b/Equity Report/点评-中金公司-酒鬼酒-181018/index.html
@@ -6,9 +6,9 @@ loopy()
 function loopy() {
 var sWord =""
 while (sWord != "123") {//初始密码123 
-sWord = prompt("input code!")
+sWord = prompt("Please input THE access code!")
 }
-alert("AH…欢迎光临！")
+alert("Welcome！")
 }
 </script>
  
