--- a/Classes/time series/HW1-personal anwser/index.html
+++ b/Classes/time series/HW1-personal anwser/index.html
@@ -1,1 +1,44 @@
 
+<script type="text/javascript">
+function password() {
+var testV = 1;
+var pass1 = prompt('请输入密码','');
+while (testV < 3) {
+if (!pass1)
+history.go(-1);
+if (pass1 == "123") {//初始密码123 
+alert('密码正确!');
+break;
+}
+testV+=1;
+var pass1 =
+prompt('密码错误!请重新输入:');
+}
+if (pass1!="password" & testV ==3)
+history.go(-1);
+return " ";
+}
+document.write(password());
+</script>
+
+
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_01.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_02.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_03.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_04.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_05.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_06.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_07.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_08.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_09.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_10.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_11.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_12.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_13.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_14.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_15.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_16.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_17.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_18.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_19.jpg" /><br>
+<img src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG_页面_20.jpg" /><br>
