--- a/Classes/time series/HW1-personal anwser/pdf.html
+++ b/Classes/time series/HW1-personal anwser/pdf.html
@@ -20,6 +20,6 @@ return " ";
 document.write(password());
 </script>
 
-<object data="your_url_to_pdf" type="application/pdf">
-    <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf	"></iframe>
+<object data="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" type="application/pdf">
+    <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf"></iframe>
 </object>
