--- a/Classes/time series/HW1-personal anwser/pdf.html
+++ b/Classes/time series/HW1-personal anwser/pdf.html
@@ -21,5 +21,5 @@ document.write(password());
 </script>
 
 <object data="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" type="application/pdf">
-    <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" style="width:100%;height:100%;"></iframe>
+    <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" allowfullscreen style="width:100%;height:100%;"></iframe>
 </object>
