--- a/Classes/time series/HW1-personal anwser/pdf.html
+++ b/Classes/time series/HW1-personal anwser/pdf.html
@@ -20,6 +20,8 @@ return " ";
 document.write(password());
 </script>
 
-<object data="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" type="application/pdf">
-    <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" allowfullscreen style="width:100%;height:100%;"></iframe>
-</object>
+<div style="padding-top:56.25%;background-color: yellow;">
+  <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" frameborder="0" allowfullscreen
+    style="width:100%;height:100%;"></iframe>
+</div>
+
