--- a/Classes/time series/HW1-personal anwser/pdf.html
+++ b/Classes/time series/HW1-personal anwser/pdf.html
@@ -20,7 +20,7 @@ return " ";
 document.write(password());
 </script>
 
-<div style="padding-top:56.25%;background-color: yellow;">
+<div style="padding-top:56.25%;">
   <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" frameborder="0" allowfullscreen
     style="width:100%;height:100%;"></iframe>
 </div>
