--- a/Classes/time series/HW1-personal anwser/pdf.html
+++ b/Classes/time series/HW1-personal anwser/pdf.html
@@ -22,6 +22,6 @@ document.write(password());
 
 <div style="padding-top:56.25%;">
   <iframe src="/Classes/time series/HW1-personal anwser/HW1-ZESHI YANG.pdf" frameborder="0" allowfullscreen
-    style="width:100%;height:100%;"></iframe>
+     style="position:absolute;top:0;width:100%;height:100%;"></iframe>
 </div>
 
