--- a/home/index.html
+++ b/home/index.html
@@ -5,10 +5,13 @@ layout: post-index
 <center>
 <font size="5" color="#ffffff">
  <span>
- <a href="/about/" target="_blank"><U><b>ABOUT ME</b></U></a><br><br>
+ <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br><br>
  
- 
- <a href="/Classes/" target="_blank"><U><b>Classes</U></b></a><br><br>
+
+  
+  
+  
+  <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br><br>
  <a href="/Equity Report/" target="_blank"><U><b>Equity Report</U></b></a><br><br>
  
  <a href="/archives/" target="_blank"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
