--- a/home/index.html
+++ b/home/index.html
@@ -3,26 +3,20 @@ layout: post-index
 ---
 
 <center>
-<font size="5" color="#ffffff">
- <span>
+
  <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br><br>
  
-
-  
-  
-  
   <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br><br>
  <a href="/Equity Report/" target="_blank"><U><b>Equity Report</U></b></a><br><br>
  
- <a href="/archives/" target="_blank"><b><U>ARCHIVE</b>(Articles Sorted by Year)</U></a><br><br>
+ <a href="/archives/" target="_blank"><b><U><p  style="color:white;">ARCHIVE</b>(Articles Sorted by Year)</p></U></a><br><br>
 
 
- <a href="/tags/" target="_blank"><U><b>TAGS</b>(Articles Sorted by Content)</U></a> <br><br>
+ <a href="/tags/" target="_blank"><U><b><p  style="color:white;">TAGS</b>(Articles Sorted by Content)</p></U></a> <br><br>
 <span>
 
- <a href="/ML and DM projects/" target="_blank"><b><U>ML&DM(machine learning and data mining projects)</U></b></a><br><br>
+ <a href="/ML and DM projects/" target="_blank"><b><U><p  style="color:white;">ML&DM(machine learning and data mining projects)</p></U></b></a><br><br>
 
  <a href="/trying/" target="_blank"><b><U>Register/log in</U></b></a><br>
-</span>
-</font>
+
 </center>
