--- a/home/index.html
+++ b/home/index.html
@@ -3,12 +3,9 @@ layout: post-index
 ---
 
 <center>
-
  <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br><br>
- 
-  <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br><br>
- <a href="/Equity Report/" target="_blank"><U><b>Equity Report</U></b></a><br><br>
- 
+ <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br><br>
+ <a href="/Equity Report/" target="_blank"><U><p  style="color:white;"><b>Equity Report</U></b></p></a><br><br>
  <a href="/archives/" target="_blank"><b><U><p  style="color:white;">ARCHIVE</b>(Articles Sorted by Year)</p></U></a><br><br>
 
 
@@ -17,6 +14,6 @@ layout: post-index
 
  <a href="/ML and DM projects/" target="_blank"><b><U><p  style="color:white;">ML&DM(machine learning and data mining projects)</p></U></b></a><br><br>
 
- <a href="/trying/" target="_blank"><b><U>Register/log in</U></b></a><br>
+ <a href="/trying/" target="_blank"><b><U><p  style="color:white;">Register/log in</p></U></b></a><br>
 
 </center>
