--- a/home/index.html
+++ b/home/index.html
@@ -3,8 +3,8 @@ layout: post-index
 ---
 
 <center>
- <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br><br>
- <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br><br>
+ <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br>
+ <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br>
  <a href="/Equity Report/" target="_blank"><U><p  style="color:white;"><b>Equity Report</U></b></p></a><br><br>
  <a href="/archives/" target="_blank"><b><U><p  style="color:white;">ARCHIVE</b>(Articles Sorted by Year)</p></U></a><br><br>
  <a href="/tags/" target="_blank"><U><b><p  style="color:white;">TAGS</b>(Articles Sorted by Content)</p></U></a> <br><br>
