--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,7 @@ layout: post-index
 ---
 
 <center>
+<font size="5">
  <a href="/about/" target="_blank"><U><p  style="color:white;"><b>ABOUT ME</b></p></U></a><br>
  <a href="/Classes/" target="_blank"><U><b><p  style="color:white;">Classes</p></U></b></a><br>
  <a href="/Equity Report/" target="_blank"><U><p  style="color:white;"><b>Equity Report</U></b></p></a><br>
@@ -10,5 +11,5 @@ layout: post-index
  <a href="/tags/" target="_blank"><U><b><p  style="color:white;">TAGS</b>(Articles Sorted by Content)</p></U></a><br>
  <a href="/ML and DM projects/" target="_blank"><b><U><p  style="color:white;">ML&DM(machine learning and data mining projects)</p></U></b></a><br>
  <a href="/trying/" target="_blank"><b><U><p  style="color:white;">Register/log in</p></U></b></a><br>
-
+</font>
 </center>
