--- a/haha.html
+++ b/haha.html
@@ -1,5 +1,18 @@
 <!DOCTYPE HTML>
 <html>
+<script>
+function password(){
+var p = prompt("Input the Password","");
+if(p!='123456'){
+alert('Wrong Password!');
+return false;
+}else{
+alert("Yes!");
+return true;
+}
+}
+</script>
+  
 <body>
 
   <p>asdfagag</p>
