--- a/haha.html
+++ b/haha.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <html>
+  
+  <head>
 <script>
 function password(){
 var p = prompt("Input the Password","");
@@ -12,7 +14,7 @@ return true;
 }
 }
 </script>
-  
+  <head>
 <body>
 
   <p>asdfagag</p>
