--- a/haha.html
+++ b/haha.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-<script>
+<script  type="text/javascript">
 function password(){
 var p = prompt("Input the Password","");
 if(p!='123456'){
