--- a/haha.html
+++ b/haha.html
@@ -1,20 +1,17 @@
 <!DOCTYPE HTML>
 <html>
-  
-  <head>
-<script  type="text/javascript">
-function password(){
-var p = prompt("Input the Password","");
-if(p!='123456'){
-alert('Wrong Password!');
-return false;
-}else{
-alert("Yes!");
-return true;
+
+<script type="text/javascript">
+loopy()
+function loopy() {
+var sWord =""
+while (sWord != "123") {//初始密码123 
+sWord = prompt("Please input THE access code!")
 }
+alert("Welcome！")
 }
 </script>
-  <head>
+
 <body>
 
   <p>asdfagag</p>
