--- a/haha.html
+++ b/haha.html
@@ -13,8 +13,7 @@ alert('密码正确!');
 break;
 }
 testV+=1;
-var pass1 =
-prompt('密码错误!请重新输入:');
+var pass1 = prompt('密码错误!请重新输入:');
 }
 if (pass1!="password" & testV ==3)
 history.go(-1);
