--- a/haha.html
+++ b/haha.html
@@ -29,7 +29,7 @@ document.write(password());
  
 <body>
 
-  <img scr="/images/1678168523.jpg" width="100%>
+  <img src="/images/1678168523.jpg" width="100%>
 
 
 </body>
